--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 
 <head>
-    <title>体力譜面難易度表</title>
+    <title>曲探し用</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
     <header class="mb-3">
         <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
-                <span class="navbar-brand mb-0 h1">体力譜面難易度表</span>
+                <span class="navbar-brand mb-0 h1">曲探し用</span>
             </div>
         </nav>
     </header>
@@ -27,10 +27,9 @@
     <div class="container">
 
         <div class="alert alert-success mb-3" role="alert">
-            <p>体力譜面を集めました。次期難易度表フォーマット対応。</p>
+            <p>適当に。次期難易度表フォーマット対応。</p>
             <p>難易度表の読み込みと表示に数秒かかります。</p>
             <hr>
-            <p class="mb-0">独断と偏見によりsatellite基準で難易度をつけました。</p>
         </div>
 
 
