--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 var obj = $("#table_int");
 
                 obj.html("");
-                $("<thead class='table-dark'><tr><th>Level</th><th>Title</th><th>Comment</th></tr></thead><tbody>")
+                $("<thead class='table-dark'><tr><th>Event</th><th>Title</th><th>Comment</th></tr></thead><tbody>")
                     .appendTo(obj);
                 var obj_sep = null;
                 for (var i = 0; i < info.length; i++) {
@@ -73,7 +73,7 @@
                     var str = $("<tr></tr>");
 
                     // Level
-                    $("<td width='5%'>" + mark + x + "</td>").appendTo(str);
+                    $("<td width='45%'>" + mark + x + "</td>").appendTo(str);
 
                     // Title
                     $("<td width='45%'>" +
