--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         .md5 + "' target='_blank'>" + info[i].title + "</a></td>").appendTo(str);
 
                     // Artist
-                    //$("<td width='40%'>" + info[i].artist + "</td>").appendTo(str);
+                    $("<td width='40%'>" + info[i].artist + "</td>").appendTo(str);
 
                     // Comment
                     $("<td width='10%'>" + info[i].comment + "</td>").appendTo(str);
